--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,8 +1,8 @@
-<% if @book.errors.any? %>
+<% if @book_new.errors.any? %>
   <div id="error_explanation">
-    <h2><%= @book.errors.count %>errors prohibited this obj from being saved:</h2>
+    <h2><%= @book_new.errors.count %>errors prohibited this obj from being saved:</h2>
     <ul>
-    <% @book.errors.full_messages.each do |message| %>
+    <% @book_new.errors.full_messages.each do |message| %>
       <li><%= message %></li>
     <% end %>
     </ul>
@@ -15,7 +15,7 @@
 		<%= render 'users/profile', user: current_user %>
 
 		<h2>New book</h2>
-		<%= render 'books/newform', book: @book %>
+		<%= render 'books/newform', book: @book_new %>
 
 	</div>
 
@@ -28,6 +28,7 @@
 					<th></th>
 					<th>Title</th>
 					<th>Opinion</th>
+					<th colspan="3"></th>
 					<th colspan="3"></th>
 				</tr>
 			</thead>
@@ -42,6 +43,20 @@
 					</td>
 					<td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
 					<td><%= book.body %></td>
+					<td>
+					<% if book.favorited_by?(current_user) %>
+                      <%= link_to book_favorites_path(book), method: :delete do %>
+                        <i class="glyphicon glyphicon-heart" aria-hidden="true" style="color: red;"></i>
+                        <%= book.favorites.count %>
+                      <% end %>
+                    <% else %>
+                      <%= link_to book_favorites_path(book), method: :post do %>
+                        <i class="glyphicon glyphicon-heart-empty" aria-hidden="true"></i>
+                        <%= book.favorites.count %>
+                      <% end %>
+                    <% end %>
+                    </td>
+					<td>コメント数：<%= link_to "#{book.post_comments.count}", book_path(book.id) %></td>
 				</tr>
 				<% end %>
 			</tbody>
