--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -12,10 +12,10 @@
 	<div class="col-xs-3">
 
 		<h2>User info</h2>
-		<%= render 'users/profile', user: @user %>
+		<%= render 'users/profile', user: @book.user %>
 
 		<h2>New book</h2>
-		<%= render 'books/newform', book: Book.new %>
+		<%= render 'books/newform', book: @book_new %>
 
 	</div>
 
@@ -32,6 +32,22 @@
 					</td>
 					<td><%= link_to @book.title, book_path(@book) %></td>
 					<td><%= @book.body %></td>
+					<!-- bookいいね -->
+					<td>
+					<% if @book.favorited_by?(current_user) %>
+            <%= link_to book_favorites_path(@book), method: :delete do %>
+              <i class="glyphicon glyphicon-heart" aria-hidden="true" style="color: red;"></i>
+              <%= @book.favorites.count %>
+            <% end %>
+            <% else %>
+              <%= link_to book_favorites_path(@book), method: :post do %>
+              <i class="glyphicon glyphicon-heart-empty" aria-hidden="true"></i>
+              <%= @book.favorites.count %>
+            <% end %>
+          <% end %>
+          </td>
+					<!-- bookコメント数 -->
+					<td>コメント数：<%= @book.post_comments.count %></td>
 					<td>
 						<% if @book.user == current_user %>
 						<%= link_to "Edit", edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %>
@@ -43,6 +59,32 @@
 					</td>
 				</tr>
 			</table>
+			<!-- コメント全文 -->
+			<ol>
+ 　　　　　　　　 <% @book.post_comments.each do |post_comment| %>
+ 　　　　　　　　   <li class="comment">
+                    <!-- アイコン -->
+                    <div class="avatar">
+                      <%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-mini.jpg") %>
+                    </div>
+                    <div class="comment-text">
+                      <%= post_comment.user.name %>
+                      <%= post_comment.comment %>
+                    </div>
+                    <% if post_comment.user == current_user %>
+                      <%= link_to "削除", book_post_comment_path(post_comment.book, post_comment), method: :delete, class: "btn btn-danger pull-right" %>
+                    <% end %>
+  　　　　　　　　  </li>
+ 　　　　　　　　 <% end %>
+　　　　　　　　</ol>
+              <%= form_for [@book, @post_comment] do |f| %>
+                <div class="row">
+                  <div class="col-sm-12">
+                    <%= f.text_area :comment, rows:'5', class: "form-control",placeholder: "コメントをここに" %>
+                  </div>
+                </div>
+                <%= f.submit "送信する", class: "btn btn-lg btn-base-1 mt-20 pull-right" %>
+              <% end %>
 
 	</div>
 </div>
