--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,6 +18,9 @@
 	    		<th>image</th>
 	    		<th>name</th>
 	    		<th colspan="3"></th>
+	    		<th colspan="3"></th>
+	    		<th colspan="3"></th>
+	    		<th colspan="3"></th>
 		    </tr>
     	</thead>
 
@@ -26,6 +29,24 @@
 	    	<tr>
 		    	<td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %></td>
 		    	<td><%= user.name %></td>
+                <td>フォロー数：<%= user.followings.count %></td>
+                <td>フォロワー数：<%= user.followers.count %></td>
+                <td>
+                  <% unless current_user?(user) %>
+                    <div id="follow_form">
+                    <% if current_user.following?(user) %>
+                      <%= form_for(current_user.following_relationships.find_by(following_id: user.id), html: { method: :delete }) do |f| %>
+                        <%= f.submit "フォローを外す", class: "btn btn-large follow-btn" %>
+                      <% end %>
+                    <% else %>
+                      <%= form_for(current_user.following_relationships.build(following_id: user.id)) do |f| %>
+                        <div><%= f.hidden_field :following_id %></div>
+                        <%= f.submit "フォローをする", class: "btn btn-large btn-primary follow-btn" %>
+                      <% end %>
+                    <% end %>
+                    </div>
+                  <% end %>
+                </td>
 		    	<td><%= link_to "Show", user_path(user), class: "user_#{user.id}" %></td>
 	    	</tr>
 	    	<% end %>
