--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -10,8 +10,41 @@
 		<th>introduction</th>
 		<th><%= user.introduction %></th>
 	</tr>
+	<tr>
+		<th>follows</th>
+		<th>
+			<% user == current_user %>
+			<a href="<%= following_user_path(user) %>">
+            <%= user.followings.count %>
+            </a>
+		</th>
+	</tr>
+	<tr>
+		<th>followers</th>
+		<th>
+			<a href="<%= followers_user_path(user) %>">
+            <%= user.followers.count %>
+            </a>
+		</th>
+	</tr>
 </table>
+<% unless current_user?(user) %>
+  <div id="follow_form">
+	<% if current_user.following?(user) %>
+	  <%= form_for(current_user.following_relationships.find_by(following_id: user.id), html: { method: :delete }) do |f| %>
+	    <%= f.submit "フォローを外す", class: "btn btn-large follow-btn" %>
+	  <% end %>
+	<% else %>
+	  <%= form_for(current_user.following_relationships.build(following_id: user.id)) do |f| %>
+	    <div><%= f.hidden_field :following_id %></div>
+	    <%= f.submit "フォローをする", class: "btn btn-large btn-primary follow-btn" %>
+	  <% end %>
+	<% end %>
+  </div>
+<% end %>
 
 <div class="row">
+	<% if user == current_user %>
 	<%= link_to '', edit_user_path(user), class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench edit_user_#{user.id}" %>
+	<% end %>
 </div>
