--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,28 +9,42 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-    <header class="navbar navbar-fixed-top navbar-inverse">
-      <div class="container">
-        <nav class="nav navbar-nav navbar-left">
-          <span>Bookers</span>
-        </nav>
-        <nav>
-          <ul class="nav navbar-nav navbar-right">
-            <% if user_signed_in? %>
-              <li><%= link_to ' Home', user_path(current_user), class: 'glyphicon glyphicon-home home' %></li>
-              <li><%= link_to ' Users', users_path, class: 'glyphicon glyphicon-user users' %></li>
-              <li><%= link_to ' Books', books_path, class: 'glyphicon glyphicon-book books' %></li>
-              <li><%= link_to ' logout', destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-out logout' %></li>
-            <% else %>
-              <li><%= link_to ' Home', root_path, class: 'glyphicon glyphicon-home home' %></li>
-              <li><%= link_to ' About', home_about_path, class: 'glyphicon glyphicon-link about' %></li>
-              <li><%= link_to ' sign up', new_user_registration_path, class: 'glyphicon glyphicon-edit sign_up' %></li>
-              <li><%= link_to ' Login', new_user_session_path, class: 'glyphicon glyphicon-log-in sign_in' %></li>
-            <% end %>
-          </ul>
-        </nav>
-
+    <header>
+      <div class="navbar navbar-fixed-top navbar-inverse">
+        <div class="container">
+          <nav class="nav navbar-nav navbar-left">
+            <span>Bookers</span>
+          </nav>
+          <nav>
+            <ul class="nav navbar-nav navbar-right">
+              <% if user_signed_in? %>
+                <li><%= link_to ' Home', user_path(current_user), class: 'glyphicon glyphicon-home home' %></li>
+                <li><%= link_to ' Users', users_path, class: 'glyphicon glyphicon-user users' %></li>
+                <li><%= link_to ' Books', books_path, class: 'glyphicon glyphicon-book books' %></li>
+                <li><%= link_to ' logout', destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-out logout' %></li>
+              <% else %>
+                <li><%= link_to ' Home', root_path, class: 'glyphicon glyphicon-home home' %></li>
+                <li><%= link_to ' About', home_about_path, class: 'glyphicon glyphicon-link about' %></li>
+                <li><%= link_to ' sign up', new_user_registration_path, class: 'glyphicon glyphicon-edit sign_up' %></li>
+                <li><%= link_to ' Login', new_user_session_path, class: 'glyphicon glyphicon-log-in sign_in' %></li>
+              <% end %>
+            </ul>
+          </nav>
+        </div>
       </div>
+      <search>
+          <br>
+          <% if user_signed_in? %>
+            <div class="search-form">
+              <%= form_tag(search_path, method: :get) do %>
+                <%= text_field_tag 'search[content]' %>
+                <%= select_tag 'search[model]', options_for_select({ "User" => "user", "Book" => "book" }) %>
+                <%= select_tag 'search[how]', options_for_select({ "完全一致" => "match", "前方一致" => "forward", "後方一致" => "backward", "部分一致" => "partical"  }) %>
+                <%= submit_tag '検索', class: "btn btn-primary" %>
+              <% end %>
+            </div>
+          <% end %>
+        </search>
     </header>
     <body>
     <div class="container">
