--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,69 +21,48 @@
 
   <div class="col-xs-9">
     <h2>Book detail</h2>
-
     <table class="table">
         <tr>
           <td>
             <%= link_to user_path(@book.user) do %>
               <%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-mini.jpg") %><br>
-            <%= @book.user.name %>
+              <%= @book.user.name %>
             <% end %>
           </td>
           <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
           <!-- bookいいね -->
           <td>
-          <% if @book.favorited_by?(current_user) %>
-            <%= link_to book_favorites_path(@book), method: :delete do %>
-              <i class="glyphicon glyphicon-heart" aria-hidden="true" style="color: red;"></i>
-              <%= @book.favorites.count %>
-            <% end %>
-            <% else %>
-              <%= link_to book_favorites_path(@book), method: :post do %>
-              <i class="glyphicon glyphicon-heart-empty" aria-hidden="true"></i>
-              <%= @book.favorites.count %>
-            <% end %>
-          <% end %>
+            <div class="favorites_<%= @book.id %>">
+              <%= render 'favorites/favorite', book: @book %>
+            </div>
           </td>
           <!-- bookコメント数 -->
           <td>コメント数：<%= @book.post_comments.count %></td>
+          <!-- ここまで -->
           <td>
             <% if @book.user == current_user %>
-            <%= link_to "Edit", edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %>
+              <%= link_to "Edit", edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %>
             <% end %>
           </td>
-          <td><% if @book.user == current_user %>
-            <%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %>
+          <td>
+            <% if @book.user == current_user %>
+              <%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %>
             <% end %>
           </td>
         </tr>
-      </table>
-      <!-- コメント全文 -->
+    </table>
+      <!-- コメント一覧 -->
       <ol>
-      <% @book.post_comments.each do |post_comment| %>
-        <li class="comment">
-          <!-- アイコン -->
-          <div class="avatar">
-            <%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-mini.jpg") %>
-          </div>
-          <div class="comment-text">
-            <%= post_comment.user.name %>
-            <%= post_comment.comment %>
-          </div>
-          <% if post_comment.user == current_user %>
-            <%= link_to "削除", book_post_comment_path(post_comment.book, post_comment), method: :delete, class: "btn btn-danger pull-right" %>
-          <% end %>
+        <li class="comments_area">
+          <%= render 'post_comments/index', book: @book %>
         </li>
-      <% end %>
       </ol>
-      <%= form_for [@book, @post_comment] do |f| %>
-        <div class="row">
-          <div class="col-sm-12">
-            <%= f.text_area :comment, rows:'5', class: "form-control",placeholder: "コメントをここに" %>
-          </div>
-        </div>
-        <%= f.submit "送信する", class: "btn btn-lg btn-base-1 mt-20 pull-right" %>
-      <% end %>
+      <!-- ここまで -->
+      <!-- コメント投稿欄 -->
+      <div class="comment-create">
+        <%= render 'post_comments/form', post_comment: @post_comment, book: @book %>
+      </div>
+      <!-- ここまで -->
   </div>
 </div>
