--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -44,19 +44,18 @@
 					<td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
 					<td><%= book.body %></td>
 					<td>
-					<% if book.favorited_by?(current_user) %>
-                      <%= link_to book_favorites_path(book), method: :delete do %>
-                        <i class="glyphicon glyphicon-heart" aria-hidden="true" style="color: red;"></i>
-                        <%= book.favorites.count %>
-                      <% end %>
-                    <% else %>
-                      <%= link_to book_favorites_path(book), method: :post do %>
-                        <i class="glyphicon glyphicon-heart-empty" aria-hidden="true"></i>
-                        <%= book.favorites.count %>
-                      <% end %>
-                    <% end %>
+						<!-- いいね数ここから -->
+						<div class="favorites_<%= book.id %>">
+							<%= render partial: 'favorites/favorite',  locals: { book: book } %>
+						</div>
+	                    <!-- いいね数ここまで -->
                     </td>
-					<td>コメント数：<%= link_to "#{book.post_comments.count}", book_path(book.id) %></td>
+					<td>
+						<!-- コメント数ここから -->
+						<div class="post_comments_<%= book.id %>">
+							コメント数：<%= link_to "#{book.post_comments.count}", book_path(book.id) %></td>
+						</div>
+						<!-- コメント数ここまで -->
 				</tr>
 				<% end %>
 			</tbody>
